Fixed vertical alignment for footnotes

--- a/theme/static/sass/main.scss
+++ b/theme/static/sass/main.scss
@@ -149,6 +149,9 @@ tt {
       }
       @extend .card-panel;
     }
+    table.footnote td.label {
+      vertical-align: top;
+    }
   }
   .card-action {
     a {
